LU-4897 lod: do index try before delete index

Do index try before delete index, especially when unlink
striped directory during orphan cleanup process.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I54d194526238dfc693ec130ed2224616c0fa0f84